# importer-generator

./: README.md  pyproject.toml
importer_generator/: cli.py
importer_generator/wordpress/: probe.py
tests/: test_json_probe.py
